# ChangeLog for net-im/kadu-kadu_completion
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-kadu_completion-1.0_p4 (01 Oct 2014)

  01 Oct 2014; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-kadu_completion-1.0_p4.ebuild:
  Bumped.

  18 Apr 2013; Michał Ziąbkowski <mziab@o2.pl>
  kadu-kadu_completion-0.12.0_p1.ebuild:
  Stabled.

*kadu-kadu_completion-0.12.0_p1 (23 Jun 2012)

  23 Jun 2012; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-kadu_completion-0.12.0_p1.ebuild, +metadata.xml:
  New ebuild.
