@@ -1,2 +1,3 @@
 DIST kadu_completion-0.12.0-1.tar.bz2 5692 SHA256 0c6e361a070c098e0fabdd7a7a893292ffd1e3f373cbce7e9f05a9fc893d0869
 DIST kadu_completion-1.0-4.tar.bz2 5715 SHA256 a702de455c5f13598fa937db2627f1b70f182d78c3b0044c62ea63af6ef57134 SHA512 f76d78c6b18220c4e9d2584e4e0169567bb75aedacf7c14cdac17662875f22321bce1f7389f1622381d3082ebe060953efdf99ae1c1e67c9c7d7fc9b8e911209 WHIRLPOOL a7757cbb41e3f9aac5772801744b45e2c92446dafe4e99d2f4f237c3278b50f19a4de29d9cb7dec4883c97a6c3cf22ca391ec350b2e8969185b2ffa2a2ea9d60
+DIST kadu_completion-2.0.tar.bz2 5757 SHA256 0b1b34d1ef0ff413c26cef87b314525926f928b5051e0bcda3f7de71894b4338 SHA512 80e7ebd6a5b19955a804f7eb662d491fad19e200e40cfacaad566ab9297d8546d746f523b38607acd9acbdaab15a16571b3ec2b73510ee50431a2d49491dd4a0 WHIRLPOOL df52ffa1dddfa921f63b34a9d477b18211e6e69f3dcdbb820f0215ae2037b85e1ef18e01b217ecd62fae48af6f166b5b81e38c435df5679f78f0a27619f835ac
