@@ -1,6 +1,12 @@
 # ChangeLog for net-im/kadu-kadu_completion
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*kadu-kadu_completion-2.0 (26 Jan 2015)
+
+  26 Jan 2015; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-kadu_completion-2.0.ebuild:
+  Bumped.
 
 *kadu-kadu_completion-1.0_p4 (01 Oct 2014)
 
